--- a/src/less/MinListe.less
+++ b/src/less/MinListe.less
@@ -12,6 +12,12 @@
   }
 
   .minOnskeliste {
+    .wishText {
+      max-width: 80%;
+      @media only screen and (max-width: 400px) {
+        max-width: 60%;
+      }
+    }
 
     .wishIconMenu {
       //margin-left: 150px;
